--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "20.12.7",
+    "eslint": "9.0.0",
     "tsup": "8.0.2",
     "tsx": "4.7.2",
     "typescript": "5.4.5"
