--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "20.12.7",
-    "eslint": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "7.7.0",
+    "@typescript-eslint/parser": "7.7.0",
+    "eslint": "8.57.0",
+    "prisma": "5.12.1",
     "tsup": "8.0.2",
     "tsx": "4.7.2",
     "typescript": "5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "5.12.1",
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
     "zod": "3.22.5"
