feat: implementano ORM e banco de dados com docker

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,11 @@
 {
+    "ignorePatterns": ["node_modules/*", "!src/**"],
     "env": {
         "browser": true,
         "es2021": true,
         "node": true
     },
+    
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended"
