--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch":"vitest",
+    "test:watch": "vitest",
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "@types/node": "20.12.7",
     "@typescript-eslint/eslint-plugin": "7.7.0",
     "@typescript-eslint/parser": "7.7.0",
+    "@vitest/coverage-v8": "1.5.0",
     "eslint": "8.57.0",
     "prisma": "5.12.1",
     "tsup": "8.0.2",
