--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ NODE_ENV=dev
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+#auth
+JWT_SECRET=biscoitogostosinho
