--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch":"vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -18,12 +23,15 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.12.7",
+    "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "7.7.0",
     "@typescript-eslint/parser": "7.7.0",
     "@vitest/coverage-v8": "1.5.0",
     "@vitest/ui": "1.5.0",
     "eslint": "8.57.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.13.0",
+    "supertest": "7.0.0",
     "tsup": "8.0.2",
     "tsx": "4.7.2",
     "typescript": "5.4.5",
